[gd_scene load_steps=4 format=2]

[ext_resource path="res://AreaSound.gd" type="Script" id=1]
[ext_resource path="res://Sounds/DoorBell.ogg" type="AudioStream" id=2]

[sub_resource type="BoxShape" id=1]

[node name="JungleSounds" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Sound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="finished" from="Sound1" to="." method="_on_Sound1_finished"]
